--- a/CustomerPersonalInfo/src/main/resources/application.properties
+++ b/CustomerPersonalInfo/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 server.port=8087
 spring.application.name=CustomerPersonalInfo
+spring.mvc.view.prefix=/jsp/
+spring.h2.console.enabled=true
+spring.datasource.platform=h2
+spring.datasource.url=jdbc:h2:mem:CustomerPolicy
